# SolitaireCPP

./: .gitignore  CMakeLists.txt  Natvis.natvis  README.md  Solitaire.vcxproj  Solitaire.vcxproj.filters
app/: CMakeLists.txt  SFML.cpp
include/Solitaire/: Card.h  CardPile.h  CardSprite.h  DragDropManager.h  EventListener.h  Game.h  GameEvent.h  Logger.h  TextureManager.h
src/Solitaire/: CMakeLists.txt  Card.cpp  CardPile.cpp  CardSprite.cpp  DragDropManager.cpp  EventListener.cpp  Game.cpp  Logger.cpp  TextureManager.cpp
